--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://mapg23.github.io/ssr-frontend",
+  "homepage": "https://mapg23.github.io/ssr-frontend/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
