--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "ssr-frontend",
+  "homepage": "https://mapg23.github.io/ssr-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://mapg23.github.io/ssr-frontend",
-
   "scripts": {
     "dev": "vite",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
@@ -28,6 +28,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "vite": "^7.1.7"
   }
 }
