--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.19.0",
+    "@codemirror/commands": "^6.9.0",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.5",
     "bootstrap": "^5.2.3",
+    "codemirror": "^6.0.2",
     "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
