--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_DOC_URL=https://jsramverk-mapg23-e4hebqhcfxbpcbey.northeurope-01.azurewebsites.net/
-VITE_DOC_URL=http://localhost:8080/
+VITE_DOC_URL=https://jsramverk-mapg23-e4hebqhcfxbpcbey.northeurope-01.azurewebsites.net/
+# VITE_DOC_URL=http://localhost:8080/
